# LastStand

./: .gitignore  CMakeLists.txt  ForEditing.txt  README.md  a.txt  main.cpp
Asset_Raw/: Background.aseprite  Bullet.aseprite  Character.aseprite  Character_Reload.aseprite  Character_Rifle.aseprite  Character_Shoot.aseprite  Character_Shotgun.aseprite  Characternew.aseprite  Gun.aseprite  Item.aseprite  PlayerAnimationSprite.aseprite  SkillNode_Accuracy.aseprite  SkillNode_Health.aseprite  SkillNode_Reload.aseprite  ZombieAnimationSprite.aseprite
Components/: AnimationController.cpp  AnimationController.h  BoxCollider.cpp  CMakeLists.txt  GameComponent.cpp  GameComponent.h  GameComponent.inl  GameObject.cpp  GameObject.h  GameObject.inl  Humanoid.cpp  Humanoid.h  Inventory.cpp  Inventory.h  Inventory.inl  RigidBody.cpp  RigidBody.h  Transform.cpp  Transform.h
ECS/: BoxCollider.h  GameComponent.cpp  GameComponent.h  GameObject.cpp  GameObject.h  Humanoid.cpp  Humanoid.h  RigidBody.cpp
Game/: Animation.cpp  Animation.h  BoxCollider.cpp  Button.cpp  CMakeLists.txt  Enemy.cpp  Enemy.h  Firearm.cpp  Firearm.h  FirearmUI.cpp  Game.cpp  Game.h  GameComponent.cpp  GameComponent.h  GameComponent.inl  GameManager.cpp  GameManager.h  GameObject.cpp  GameObject.inl  Humanoid.cpp  Image.cpp  Inventory.cpp  Item.cpp  Item.h  MediaManager.cpp  Physics.cpp  Physics.h  Player.cpp  Player.h  PlayerStatistic.cpp  PlayerUI.h  Projectile.cpp  Projectile.h  ReloadUI.cpp  RenderManager.cpp  RigidBody.cpp  Shop.cpp  Shop.h  Sprite.cpp  StatusBar.cpp  (+14 more)
GameCore/: CMakeLists.txt  GameCore.cpp  GameCore.h
GameObjects/: Ammunition.cpp  Ammunition.h  Bullet.cpp  Bullet.h  CMakeLists.txt  Consumable.cpp  Consumable.h  DamageIndicator.cpp  DamageIndicator.h  Firearm.cpp  Firearm.h  FirearmUI.cpp  HotBar.cpp  HotBar.h  HotBarUI.cpp  HotBarUI.h  Inventory.cpp  Inventory.h  Inventory.inl  InventoryUI.cpp  InventoryUI.h  Item.cpp  Item.h  Item.inl  PauseMenu.cpp  PauseMenu.h  Pistol.cpp  Player.cpp  Player.h  PlayerStatistic.cpp  PlayerStatistic.h  Projectile.cpp  Rifle.cpp  Shotgun.cpp  StatusBar.cpp  StatusBar.h  Zombie.cpp  Zombie.h
Lib/: CMakeLists.txt
Manager/: AnimationManager.cpp  AnimationManager.h  AudioManager.cpp  AudioManager.h  CMakeLists.txt  DataManager.cpp  DataManager.h  GameManager.cpp  GameManager.h  ItemManager.cpp  ItemManager.h  ItemManager.inl  MediaManager.cpp  MediaManager.h  PhysicsManager.cpp  PhysicsManager.h  RenderManager.cpp  RenderManager.h  UIEventManager.cpp  UIEventManager.h  WaveInfoUI.cpp  WaveManager.cpp  WaveManager.h
Menu/: CMakeLists.txt  DeathMessage.cpp  DeathMessage.h  FirearmAttributeUIGroup.cpp  FirearmAttributeUIGroup.h  FirearmSelectionUI.cpp  FirearmSelectionUI.h  FirearmUpgradeUIGroup.cpp  FirearmUpgradeUIGroup.h  ItemSelectionUI.cpp  ItemSelectionUI.h  KeyBindSingleUIGroup.cpp  KeyBindSingleUIGroup.h  KeyBindUIGroup.cpp  KeyBindUIGroup.h  Menu.cpp  Menu.h  SettingsUI.cpp  SettingsUI.h  Shop.cpp  Shop.h  SkillInfoUI.cpp  SkillInfoUI.h  SkillList.cpp  SkillList.h  SliderUIGroup.cpp  SliderUIGroup.h  Statistic.cpp  Statistic.h  Tutorial.cpp  Tutorial.h
Shop/: CMakeLists.txt  FirearmAttributeUIGroup.cpp  FirearmAttributeUIGroup.h  FirearmSelectionUI.cpp  FirearmSelectionUI.h  FirearmUpgrade.cpp  FirearmUpgrade.h  FirearmUpgradeUIGroup.cpp  FirearmUpgradeUIGroup.h  ItemInfoUI.cpp  ItemInfoUI.h  ItemSelectionUI.cpp  ItemSelectionUI.h  Shop.cpp  Shop.h  SkillInfoUI.cpp  SkillInfoUI.h  SkillList.cpp  SkillList.h  SkillNode.cpp
Texture/: Button.cpp  CMakeLists.txt  Image.cpp  Sprite.cpp  Text.cpp  Texture.cpp  Texture.h
Utils/: Algorithm.cpp  Algorithm.inl  Align.cpp  Animation.cpp  Animation.h  AnimationClip.cpp  AnimationClip.h  AnimationNode.cpp  AnimationNode.h  Bound.cpp  CMakeLists.txt  Color.cpp  Math.cpp  Random.cpp  Random.inl  Type.cpp  Type.h  Type.inl  Utils.h  Vector2.cpp  Version.h
